--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,17 @@
+node_modules
+dist
+.env
+.env.local
+
+# OS
+.DS_Store
+
 # Logs
-logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+node_modules/
+dist/
+.vscode/
+.env
